Fixed minor bugs in enter_set.xml

--- a/app/src/main/res/layout/enter_set.xml
+++ b/app/src/main/res/layout/enter_set.xml
@@ -30,6 +30,7 @@
         android:singleLine="true"
         android:maxLength="5"
         android:shadowColor="#000000"
+        style="@style/EditTextCustomHolo"
         android:hint="Weight"
         android:layout_marginLeft="20dp"
         android:layout_marginStart="41dp"
@@ -54,6 +55,7 @@
         android:id="@+id/et_reps"
         android:singleLine="true"
         android:maxLength="3"
+        style="@style/EditTextCustomHolo"
         android:shadowColor="#000000"
         android:hint="Reps"
         android:layout_marginTop="100dp"
